--- a/index.html
+++ b/index.html
@@ -24,10 +24,34 @@
     />
   </head>
   <body>
+    <section>
+      <h1>Hi. I'm Aisha.</h1>
+      <p>
+        I am a <span>Responsive Designer & Developer</span> who thrives on
+        visual storytelling. When I'm not working, pursuing side projects, or
+        getting lost in the rabbit hole of blogs & books, I can be found
+        traveling, hiking, and searching for new stories.
+      </p>
+    </section>
     <section class="wrapper">
-      <div class="div-1">Div 1</div>
-      <div class="div-2">Div 2</div>
-      <div class="div-3">Div 3</div>
+      <div class="div-1">
+        I was born and raised in NYC, but <span>my real roots</span> reach to
+        South America. I owe my travel bug to being a first generation American
+        with family all over the world - we were always on the go!
+      </div>
+      <div class="vertical-line"></div>
+      <div class="div-2">
+        <span>My passion: </span> I LOVE music - it's one of the most powerful
+        and diverse methods for expression & communication. In the meantime, I
+        get my fix by going to lots & lots of concerts. I'm at 160 and counting!
+      </div>
+      <div class="vertical-line"></div>
+      <div class="div-3">
+        <span>A fun fact: </span>As a true New Yorker, I'm slightly embarrassed
+        to say that I only learned how to ride a plain ol' stationary bike 1
+        year ago, and have yet to learn to drive. But, the real takeaway is that
+        I'm learning!
+      </div>
     </section>
   </body>
 </html>
